# contract-bnf-sitter

./: .gitignore  CHANGELOG.md  LBNF.cf  LICENSE  PrintAlexHappy  README.md  RustRegex.cf  TreeSitter.cf  bnf-sitter.cabal  gleam.toml  grammar.js  input  shell.nix  test.sh  updateGrammar.sh
LBNF/: AbsLBNF.hs  DocLBNF.txt  LexLBNF.x  ParLBNF.y  PrintLBNF.hs  SkelLBNF.hs  TestLBNF.hs
RustRegex/: AbsRustRegex.hs  DocRustRegex.txt  LexRustRegex.x  ParRustRegex.y  PrintRustRegex.hs  SkelRustRegex.hs  TestRustRegex.hs
TreeSitter/: AbsTreeSitter.hs  DocTreeSitter.txt  LexTreeSitter.x  ParTreeSitter.y  PrintTreeSitter.hs  SkelTreeSitter.hs  TestTreeSitter.hs
app/: Main.hs  Translate.hs  Util.hs
samples/LBNF/: TreeSitter.cf  bar.cf  const.cf  digit.cf  entrypoints.cf  precedence.cf  predefined.cf  sep.cf
samples/TreeSitter/: bar.js  const.js  digit.js  entrypoints.js  precedence.js  predefined.js  sep.js
samples/bar/: 1  2
samples/predefined/: char_a  char_newline  double  double_trailing_0  ident  ident_  ident_apo  integer_0  integer_leading_0  string  string_empty
samples/sep/: abc  c_one  c_two  terminator_abc
samplesLBNF/: TreeSitter.cf  const.cf  predefined.cf
samplesRustRegex/: quote
samplesTreeSitter/: minimal.js  predefined.js  quote.js
src/: bnf.gleam  bnf_sitter.gleam  indent.gleam  util.gleam
test/: GenLBNF.hs  Spec.hs
