cabal-version:      3.0
name:               bnf-sitter
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             or-n
maintainer:         kulombowie@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bnf-sitter
    import:           warnings
    main-is:          Main.hs
    other-modules:
      AbsLBNF
      ParLBNF
      ErrM
      PrintLBNF
      SkelLBNF
      LexLBNF
      AbsTreeSitter
      ParTreeSitter
      ErrM
      PrintTreeSitter
      SkelTreeSitter
      LexTreeSitter
      AbsRustRegex
      ParRustRegex
      ErrM
      PrintRustRegex
      SkelRustRegex
      LexRustRegex
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        array
    hs-source-dirs:
        app,
        LBNF,
        TreeSitter,
        RustRegex,
    build-tool-depends:
        happy:happy,
        alex:alex
    default-language: Haskell2010
