cabal-version:      3.0
name:               bnf-sitter
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             or-n
maintainer:         kulombowie@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall -Wno-missing-signatures

library
  import:            warnings
  exposed-modules:   Translate
  other-modules:
    ErrM
    AbsLBNF
    ParLBNF
    PrintLBNF
    SkelLBNF
    LexLBNF
    AbsTreeSitter
    ParTreeSitter
    PrintTreeSitter
    SkelTreeSitter
    LexTreeSitter
    Util
  build-depends:
    base,
    array,
    containers
  hs-source-dirs:
    app,
    LBNF,
    TreeSitter,
    RustRegex
  build-tool-depends:
    happy:happy,
    alex:alex
  default-language: Haskell2010
  default-extensions: LambdaCase

executable bnf-sitter
  import:           warnings
  main-is:          Main.hs
  other-modules:
    AbsLBNF
    AbsTreeSitter
    LexLBNF
    LexTreeSitter
    ParLBNF
    ParTreeSitter
    PrintLBNF
    PrintTreeSitter
    Translate
    Util
  build-depends:
    base >=4.18.2.1,
    array,
    bnf-sitter,
    containers
  hs-source-dirs:
    app,
    LBNF,
    TreeSitter,
    RustRegex,
  build-tool-depends:
    happy:happy,
    alex:alex
  default-language: Haskell2010
  default-extensions: LambdaCase

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    GenLBNF
  build-depends:       
    base >=4.18.2.1,
    hspec,
    QuickCheck,
    bnf-sitter,
    process,
    directory,
    text,
    bytestring,
    deepseq,
    unix,
  default-language:    Haskell2010
  default-extensions: LambdaCase
